--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -58,7 +58,7 @@
 Select {
     border: hidden;
     font-family: "Roboto", sans-serif;
-    font-size: 14px !important;;
+    font-size: 14px ;
     margin-top: 15px;
     
 } 
